--- a/config.json
+++ b/config.json
@@ -4,10 +4,12 @@
     "path_image_dir": "color/",
     "path_scene_dir": "scene/",
 
-    "path_open3d_local_transformation" : "local_transform",
-    "path_g2o_local_transformation" : "local_transform",
+    "path_open3d_local_transformation" : "local_transform_open3d",
+    "path_g2o_local_transformation" : "local_transform_g2o",
 
-    "local_transform_template": "local_trans_%05d_to_%05d.json",
+    "local_trans_template": "local_trans_%05d_to_%05d.json",
+    "local_trans_dict_g2o": "local_trans_dict_g2o.json",
+    "local_trans_dict_open3d": "local_trans_dict_g2o.json",
 
     "tile_info_dict_all_name": "tile_info_dict_all.json",
     "tile_info_dict_name": "tile_info_dict.json",
@@ -40,17 +42,23 @@
     "crop_width_by_pixel": 50,
     "crop_height_by_pixel": 30,
 
-    "n_features": 400,
+    "n_features": 500,
+    "num_matches_thresh1": 6,
     "cv_max_level": 3,
     "conf_threshold": 0.3,
+
     "scaling_tolerance": 0.05,
     "rotation_tolerance": 0.1,
-    "num_matches_thresh1": 6,
 
     "max_depth": 300.0,
     "voxel_size": 0.008125,
     "max_depth_diff": 0.01,
 
+
+    "max_iterations": 200,
+    "odometry_info_weight": 100,
+    "loop_closure_info_weight": 100,
+    "sensor_info_weight": 50,
     "max_correspondence_distance": 0.05,
     "preference_loop_closure_odometry": 10,
     "edge_prune_threshold": 0.00,
@@ -64,22 +72,5 @@
         0.01152412,  0.97022468, -0.01923989,  0,
         0.02943545,  0.01878122,  0.97500855,  0.0,
         0.0,         0.0,         0.0,         1.0
-    ],
-
-    "virtual_node_information": [
-        [ 100000000,         0,         0,         0,         0,         0],
-        [         0, 100000000,         0,         0,         0,         0],
-        [         0,         0, 100000000,         0,         0,         0],
-        [         0,         0,         0, 100000000,         0,         0],
-        [         0,         0,         0,         0, 100000000,         0],
-        [         0,         0,         0,         0,         0, 100000000]
-    ],
-    "virtual_edge_information": [
-        [   100000,         0,         0,         0,         0,         0],
-        [        0,    100000,         0,         0,         0,         0],
-        [        0,         0,     10000,         0,         0,         0],
-        [        0,         0,         0,      1000,         0,         0],
-        [        0,         0,         0,         0,      1000,         0],
-        [        0,         0,         0,         0,         0,      1000]
     ]
 }
