--- a/config.json
+++ b/config.json
@@ -24,12 +24,23 @@
     "index_start" : 0,
     "index_end" : -1,
     "subsample_per_n_frame": 1,
+
     "laplacian_threshold": 1000,
     "laplacian_relative_threshold": 0.5,
+
     "odometry_range": 2,
     "loop_closure_search_range_factor": 2,
     "normal_direction_tolerance_by_cos": 0.98,
+
+    "icp_method": "color",
+    "global_registration": "ransac",
+
     "path_camera_intrinsic": "",
+     "camera_offset": [
+         0.96996688, -0.01209714, -0.02935986,  0,
+         0.01152412,  0.97022468, -0.01923989,  0,
+         0.02943545,  0.01878122,  0.97500855,  0.0,
+         0.0,         0.0,         0.0,         1.0],
 
     "n_keyframes_per_n_frame": 5,
     "keyframe_voxel_size": 2.0,
@@ -59,18 +70,82 @@
     "odometry_info_weight": 100,
     "loop_closure_info_weight": 100,
     "sensor_info_weight": 50,
+    "sensor_info_g2o": [
+        [0, 0, 0, 0, 0, 0],
+        [0, 0, 0, 0, 0, 0],
+        [0, 0, 0, 0, 0, 0],
+        [0, 0, 0, 5, 0, 0],
+        [0, 0, 0, 0, 5, 0],
+        [0, 0, 0, 0, 0, 5]],
+    "match_info_g2o": [
+        [5, 0, 0, 0, 0, 0],
+        [0, 5, 0, 0, 0, 0],
+        [0, 0, 3, 0, 0, 0],
+        [0, 0, 0, 2, 0, 0],
+        [0, 0, 0, 0, 2, 0],
+        [0, 0, 0, 0, 0, 5]],
+
     "max_correspondence_distance": 0.05,
     "preference_loop_closure_odometry": 10,
     "edge_prune_threshold": 0.00,
     "visualization_voxel_size": 0.008125,
 
-    "icp_method": "color",
-    "global_registration": "ransac",
 
-    "camera_offset": [
-        0.96996688, -0.01209714, -0.02935986,  0,
-        0.01152412,  0.97022468, -0.01923989,  0,
-        0.02943545,  0.01878122,  0.97500855,  0.0,
-        0.0,         0.0,         0.0,         1.0
-    ]
+    "visualization": [
+        {
+            "key_frame_pcd_pose_is_enabled": true,
+            "regular_frame_pcd_pose_is_enabled": true,
+
+            "key_frame_wireframes_pose_is_enabled": true,
+            "regular_frame_wireframes_pose_is_enabled": true,
+
+            "odometry_edgeset_pose_is_enabled": true,
+            "c_loop_edgeset_pose_is_enabled": true,
+            "f_loop_edgeset_pose_is_enabled": false,
+
+            "full_image_pcd_pose_is_enabled": false,
+
+            "key_frame_pcd_sensor_is_enabled": false,
+            "regular_frame_pcd_sensor_is_enabled": false,
+
+            "key_frame_wireframes_sensor_is_enabled": false,
+            "regular_frame_wireframes_sensor_is_enabled": false,
+
+            "odometry_edgeset_sensor_is_enabled": false,
+            "c_loop_edgeset_sensor_is_enabled": false,
+            "f_loop_edgeset_sensor_is_enabled": false,
+
+            "full_image_pcd_sensor_is_enabled": false,
+
+            "sensor_edgeset_is_enabled": false,
+
+            "image_pcd_downsample_factor": 0.1
+        }
+    ],
+
+
+
+    "key_frame_pcd_pose_color": [1, 0, 0],
+    "regular_frame_pcd_pose_color": [0, 0, 0],
+
+    "key_frame_wireframes_pose_color": [1, 0.7, 0.7],
+    "regular_frame_wireframes_pose_color": [0.8, 0.8, 0.8],
+
+    "odometry_edgeset_pose_color": [0.8, 0.6, 0.6],
+    "c_loop_edgeset_pose_color": [0.8, 0.8, 1],
+    "f_loop_edgeset_pose_color": [0.8, 1, 0.8],
+    "full_image_pcd_pose_color_filter": [1, 1, 1],
+
+    "key_frame_pcd_sensor_color": [1, 0.7, 0.7],
+    "regular_frame_pcd_sensor_color": [0.8, 0.8, 0.8],
+
+    "key_frame_wireframes_sensor_color": [0.7, 0.7, 1],
+    "regular_frame_wireframes_sensor_color": [0.7, 0.9, 0.7],
+
+    "odometry_edgeset_sensor_color": [0.8, 0.6, 0.6],
+    "c_loop_edgeset_sensor_color": [0.8, 0.8, 1],
+    "f_loop_edgeset_sensor_color": [0.8, 1, 0.8],
+    "full_image_pcd_sensor_color_filter": [1, 1, 1],
+
+    "sensor_edgeset_color": [0.9, 0.9, 0.9]
 }
